assets/css/styles.css
/* ... */
#cocktail-card button:hover {
    color: rgb(240, 132, 60);
    opacity: .7;
}

#cocktail-card:hover {
    scale: 1.01;
}

#coffee-card {

    max-width: 300px;
    margin-left: 150px;
    font-family: Montserrat, Arial;
    text-align: center;
}

#coffee-card-header {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}


#coffee-card img {
    max-width: 300px;
}

#coffee-card button {
    border: none;
    outline: 0px;
    padding: 12px;
    color: white;
    background-color: #000;
    text-align: center;
    width: 100%;
    font-size: 18px;
}

#coffee-card button:hover {
    color: rgb(240, 132, 60);
    opacity: .7;
}

#coffee-card:hover {
    scale: 1.01;
}

#idea-card {

    max-width: 300px;
    margin-left: 150px;
    font-family: Montserrat, Arial;
    text-align: center;
    margin-bottom: 100px;
}

#idea-card-header {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}


#idea-card img {
    max-width: 300px;
}

#idea-card button {
    border: none;
    outline: 0px;
    padding: 12px;
    color: white;
    background-color: #000;
    text-align: center;
    width: 100%;
    font-size: 18px;
}

#idea-card button:hover {
    color: rgb(240, 132, 60);
    opacity: .7;
}

#idea-card:hover {
    scale: 1.01;
}

#social-medias {
    font-size: 100%;
    margin: 1%;
    padding: 1.5%;
    color: #3a3a3a;
    gap: 150px;
}

#social-medias {
    font-family: Pushster, sans-serif;
    text-align: center;
}

#social-medias li {
    display: inline;
}

#social-medias i {
    font-size: 160%;
    margin: 1%;
    padding: 1.5%;
    color: #3a3a3a;
}


/* About PAGE */

#creator-info_ {
    padding: 10rem 0 25rem 0;
    margin: 0 10rem 0 15rem;
}

#circle-container_ {
    position: absolute;
    width: 300px;
    height: 300px;
    padding: 30px;
    border-style: solid;
    border-color: rgb(240, 132, 60);
    border-width: 1px;
    border-radius: 50%;



}

#creator-img {
    background: url(../images/estrella.jpg) no-repeat center center;
    background-size: cover;
    height: 100%;
    border-radius: 50%;
}

#web_creator_info {
    padding: 10rem 50rem;
    margin: 0 10rem 0 15rem;
}

#circle-container_web {
    position: inherit;
    width: 300px;
    height: 300px;
    padding: 30px;
    border-style: solid;
    border-color: rgb(240, 132, 60);
    border-width: 1px;
    border-radius: 50%;
    margin: 0 0 0 35rem;

}

#creator-img_web {
    background: url(../images/richard.jpg) no-repeat center center;
    background-size: cover;
    height: 100%;
    border-radius: 50%;
}

#creator-list>li,
ol {
    list-style-type: none;
    font-size: 20px;
    text-align: center;
    padding: 0 3rem;

}

#creator-list_web>li,
ol {
    list-style-type: none;
    font-size: 20px;
    text-align: center;
    padding: 0 0rem 0 0rem;

}

#want-to-contact {
    font-family: Pushster, sans-serif;
    margin: 0 20rem;
    font-weight: normal;
    padding-left: 57px;

}

#food-list-header h3 {
    display: grid;
    align-items: center;
    justify-content: space-around;
}

h3 {
    display: grid;
    align-items: center;
    justify-content: space-around;
}

#want-to-contact a {
    font-family: Pushster, sans-serif;
    margin: 0 20rem;


}



/*contact page and form */

.contact-form {
    font-family: Montserrat, Arial, Helvetica, sans-serif;
    max-width: 500px;
    margin: .5rem auto;
    border: 2px solid;
    border-color: rgb(240, 132, 60);
    padding: 2rem;
    border-radius: 5px;


}

.contact-form label,
input,
textarea {
    display: block;
    padding: .25rem 0;
    width: 100%;

}

.contact-form input,
textarea {
    display: block;
    padding: .5rem;
    width: 95%;
    font-size: 15px;

}

#send-btn {
    border: 0%;
    padding: .5rem;
    margin: 1rem 0;
    width: auto;
    text-transform: uppercase;
    cursor: pointer;

}

#send-btn:hover {
    background-color: rgb(240, 132, 60);
    color: white;
}

#form-contact {
    padding: 5rem 0;

}

#phone-size-recipe-selection {
    font-family: Pushster, sans-serif;
    text-align: center;
    font-size: 20px;
    line-height: 30px;
    border-bottom: none;
}

#phone-size-recipe-selection:hover {
    border-bottom: 1px solid rgb(240, 132, 60);
}

/*food page card */
#food_card_ {
    max-width: 300px;
    margin-left: 110px;
    font-family: Montserrat, Arial;
    text-align: center;
}

div#food_card_ {
    margin-left: 5px;
}

#food_card_header {
    box-shadow: 0 4px 8px 0 rgb(240, 132, 60, 0.3);
}

div#food_card_header {
    margin-top: 10rem;
}

#food_card_ img {
    max-width: 300px;

}

#food_card_ button {
    border: none;
    outline: 0px;
    padding: 12px;
    color: white;
    background-color: #000;
    text-align: center;
    width: 100%;
    font-size: 18px;
}

#food_card_ button:hover {
    color: rgb(240, 132, 60);
    opacity: .7;
}

#food_card_:hover {
    scale: 1.01;
}


/* Cocktail page card */
#cocktail_card {

    max-width: 300px;
    margin-left: 150px;
    font-family: Montserrat, Arial;
    text-align: center;
}

div#cocktail_card {
    margin-left: 5px;
}

#cocktail_card_header {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

div#cocktail_card_header {
    margin-top: 10rem;
}


#cocktail_card img {
    max-width: 300px;
}

#cocktail_card button {
    border: none;
    outline: 0px;
    padding: 12px;
    color: white;
    background-color: #000;
    text-align: center;
    width: 100%;
    font-size: 18px;
}

#cocktail_card button:hover {
    color: rgb(240, 132, 60);
    opacity: .7;
}

#cocktail_card {

    max-width: 300px;
    margin-left: 150px;
    font-family: Montserrat, Arial;
    text-align: center;
}

#cocktail-card_header {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}


#cocktail_card img {
    max-width: 300px;
}

#cocktail_card button {
    border: none;
    outline: 0px;
    padding: 12px;
    color: white;
    background-color: #000;
    text-align: center;
    width: 100%;
    font-size: 18px;
}

#cocktail_card button:hover {
    color: rgb(240, 132, 60);
    opacity: .7;
}
/* ... */

